--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,5 +79,5 @@ fos_rest:
         view_response_listener: force
     format_listener:
         rules:
-            - { path: '^/api', priorities: ['json'], fallback_format: 'json' }
-            - { path: '^/web', priorities: ['html'], fallback_format: 'html' }
+            - { path: '^/api', priorities: ['json', 'html'], fallback_format: html, prefer_extension: true }
+            - { path: '^/', priorities: [ 'html', '*/*'], fallback_format: ~, prefer_extension: true }
