--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,6 +69,14 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
+fos_user:
+    db_driver: orm # other valid values are 'mongodb' and 'couchdb'
+    firewall_name: main
+    user_class: FosUserBundle\Entity\User
+    from_email:
+        address: "%mailer_user%"
+        sender_name: "%mailer_user%"
+
 fos_rest:
     serializer:
         serialize_null: true
