--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "doctrine/doctrine-migrations-bundle": "^1.2",
         "white-october/pagerfanta-bundle": "^1.0",
         "guzzlehttp/guzzle": "~5.0",
-        "phpunit/phpunit": "~4.6.0"
+        "phpunit/phpunit": "~4.6.0",
+        "friendsofsymfony/user-bundle": "~2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
